# fashion-style-recognition-mm-rag

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  show_dataset.py
backend/: app.py  settings.py  urls.py  views.py  wsgi.py
backend/models/: config.py  image_processor.py  llm_service.py
backend/utils/: helpers.py
frontend/: index.html
frontend/src/: App.jsx  index.css
